# Learn-CPP

./: .gitignore  CMakeLists.txt  buildFlags.properties  build_file.sh
cmake/: GetDependencies.cmake
config/: ProjectConfigurations.hpp.in  ProjectConfigurations.in  dependencies.csv  log_conf.toml
src/main/cpp/: main.cpp
src/main/cpp/service/: UsersDatabase.cpp
src/main/includes/: LoggerSetup.h
src/main/includes/entities/: About.h  CollegeDetails.h  EducationDetails.h  EmployerInformation.h  Location.h  SocialNetworks.h  User.h  WorkExperience.h
src/main/includes/service/: DatabaseService.h  UsersDatabase.h
